eueno integrate
