# swagger/swagger.json
@@ -6,10 +6,6 @@
   },
   "tags": [
     {
-      "name": "authen",
-      "description": "API for authentication"
-    },
-    {
       "name": "data-encrypt",
       "description": "API for upload and get data encrypt"
     },
@@ -19,147 +15,6 @@
     }
   ],
   "paths": {
-    "/api/authen/register": {
-      "post": {
-        "tags": [
-          "authen"
-        ],
-        "summary": "API Resgister account",
-        "description": "API register account",
-        "requestBody": {
-          "description": "Register new account",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/User"
-              }
-            },
-            "application/xml": {
-              "schema": {
-                "$ref": "#/components/schemas/User"
-              }
-            },
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/User"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "default": {
-            "description": "API response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              },
-              "application/xml": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              },
-              "application/x-www-form-urlencoded": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/authen/login": {
-      "post": {
-        "tags": [
-          "authen"
-        ],
-        "summary": "API Login",
-        "description": "API for get jwt",
-        "requestBody": {
-          "description": "Enter username and password",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/User"
-              }
-            },
-            "application/xml": {
-              "schema": {
-                "$ref": "#/components/schemas/User"
-              }
-            },
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/User"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "default": {
-            "description": "API response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              },
-              "application/xml": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              },
-              "application/x-www-form-urlencoded": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              }
-            }
-          }
-        }
-      },
-      "get": {
-        "tags": [
-          "authen"
-        ],
-        "security": [
-          {
-            "bearerAuth": [
-              "write", "read"
-            ]
-          }
-        ],
-        "summary": "API Resgister account",
-        "description": "API register account",
-        "responses": {
-          "default": {
-            "description": "API response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              },
-              "application/xml": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              },
-              "application/x-www-form-urlencoded": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              }
-            }
-          }
-        }
-
-      }
-    },
     "/api/data-encrypt": {
       "post": {
         "tags": [
